[project]
name = "farmec-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.6.2",
    "django>=6.0.1",
    "django-debug-toolbar>=6.2.0",
    "django-environ>=0.12.0",
    "django-extensions>=4.1",
    "django-filter>=25.2",
    "django-htmx>=1.27.0",
    "django-storages>=1.14.6",
    "django-tailwind>=4.4.2",
    "django-unfold>=0.76.0",
    "model-bakery>=1.23.2",
    "pillow>=12.1.0",
    "pytest-django>=4.11.1",
    "redis>=7.1.0",
    "ruff>=0.14.14",
    "weasyprint>=68.0",
]
